--- a/styles.css
+++ b/styles.css
@@ -115,34 +115,6 @@ nav {
   border-radius: 100%;
 }
 
-.destination__container {
-  position: relative;
-  padding: 5rem 0 5rem 5rem;
-  flex: 1;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  gap: 2rem;
-  align-items: center;
-}
-
-.bg__img__1 {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-100%);
-  opacity: 0.6;
-  z-index: -1;
-}
-
-.bg__img__2 {
-  position: absolute;
-  bottom: 2rem;
-  right: 50%;
-  transform: translateX(100%);
-  opacity: 0.8;
-  z-index: -1;
-}
-
 .socials {
   position: absolute;
   top: 25rem;
@@ -197,19 +169,19 @@ nav {
   cursor: pointer;
 }
 
-.destination__grid {
+.articles__grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
 }
 
-.destination__card {
+.article__card {
   height: 100%;
   background-color: var(--white);
   box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.7);
 }
 
-.destination__card img {
+.article__card img {
   width: 100%;
 }
 
@@ -245,10 +217,6 @@ nav {
   .search {
     max-width: 235px;
   }
-
-  .destination__container {
-    grid-template-columns: 1fr;
-  }
 }
 
 @media (width < 900px) {
@@ -259,8 +227,7 @@ nav {
   .content h1 {
     font-size: 4rem;
   }
-
-  .destination__grid {
+  .articles__grid {
     grid-template-columns: repeat(2, 1fr);
   }
 }
@@ -270,15 +237,11 @@ nav {
     display: none;
   }
 
-  .destination__container {
-    padding-left: 3rem;
-  }
-
   .content h1 {
     font-size: 3rem;
   }
 
-  .destination__grid {
+  .articles__grid {
     grid-template-columns: repeat(1, 1fr);
   }
 }
