--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,34 @@ nav {
   border-radius: 100%;
 }
 
+.articles__container {
+  position: relative;
+  padding: 5rem 0 5rem 5rem;
+  flex: 1;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 2rem;
+  align-items: center;
+}
+
+.bg__img__1 {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-100%);
+  opacity: 0.6;
+  z-index: -1;
+}
+
+.bg__img__2 {
+  position: absolute;
+  bottom: 2rem;
+  right: 50%;
+  transform: translateX(100%);
+  opacity: 0.8;
+  z-index: -1;
+}
+
 .socials {
   position: absolute;
   top: 25rem;
@@ -217,6 +245,10 @@ nav {
   .search {
     max-width: 235px;
   }
+
+  .articles__container {
+    grid-template-columns: 1fr;
+  }
 }
 
 @media (width < 900px) {
@@ -227,6 +259,7 @@ nav {
   .content h1 {
     font-size: 4rem;
   }
+
   .articles__grid {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -235,6 +268,10 @@ nav {
 @media (width < 600px) {
   .search {
     display: none;
+  }
+
+  .articles__container {
+    padding-left: 3rem;
   }
 
   .content h1 {
